kube/barnard_dao-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dao-api-deployment-barnard
  labels:
    app: dao-api-barnard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dao-api-barnard
  template:
    metadata:
      labels:
        app: dao-api-barnard
    spec:
      containers:
        - name: dao-api-barnard
          image: ghcr.io/starcoinorg/starcoin_dao_api:sha-395ae5a
          ports:
            - containerPort: 8600
