kube/dao-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dao-api-deployment
  labels:
    app: dao-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dao-api
  template:
    metadata:
      labels:
        app: dao-api
    spec:
      containers:
        - name: dao-api
          image: ghcr.io/starcoinorg/starcoin_dao_api:sha-5be44fe
          ports:
            - containerPort: 8600
