kube/dev_dao-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dao-api-deployment-dev
  labels:
    app: dao-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dao-api-dev
  template:
    metadata:
      labels:
        app: dao-api-dev
    spec:
      containers:
        - name: dao-api-dev
          image: ghcr.io/starcoinorg/starcoin_dao_api:sha-ea05074
          ports:
            - containerPort: 8600
